[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Artur Hoffsümmer <artur.h.0427@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.57"

[build]
target = "wasm32-unknown-unknown"